--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
             </div>
 
             <div class="hero-card">
-                <!-- Mets ici ta photo à la place du placeholder -->
-                <!-- Remplace src="images/matis.jpg" par le bon chemin -->
+                <!-- Ta photo (fichier matis.jpg à la racine du dépôt) -->
                 <div class="hero-photo">
-                    <img src="images/matis.jpg" alt="Photo de Rodrigues Matis">
+                    <img src="matis.jpg" alt="Photo de Rodrigues Matis">
                 </div>
                 <div class="hero-info">
                     <p><strong>Ville :</strong> Cergy (FR)</p>
@@ -135,9 +134,9 @@
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Mets ici une photo de l’ILEPS -->
+                    <!-- Photo de l’ILEPS (fichier ileps.jpg à la racine) -->
                     <div class="image-wrapper">
-                        <img src="images/ileps.jpg" alt="Bâtiment de l’ILEPS à Cergy">
+                        <img src="ileps.jpg" alt="Bâtiment de l’ILEPS à Cergy">
                     </div>
                     <p class="img-caption">Campus de l’ILEPS à Cergy (photo à personnaliser).</p>
                 </div>
@@ -177,9 +176,9 @@
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Mets ici une photo des Bains de Seine Mauldre -->
+                    <!-- Photo des Bains (fichier les-bains.jpg à la racine) -->
                     <div class="image-wrapper">
-                        <img src="images/les-bains.jpg" alt="Les Bains de Seine Mauldre">
+                        <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
                     </div>
                     <p class="img-caption">Les Bains de Seine Mauldre (photo à personnaliser).</p>
                 </div>
