--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
                     <ul class="contact-list">
                         <li>
                             <span class="contact-label">Email :</span>
-                            <a href="mailto:exemple@mail.com">exemple@mail.com</a>
-                            <!-- Remplace par ton vrai mail -->
+                            <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
                         </li>
                         <li>
                             <span class="contact-label">LinkedIn :</span>
@@ -210,7 +209,7 @@
                                 target="_blank"
                                 rel="noopener noreferrer"
                             >
-                                Profil LinkedIn
+                                linkedin.com/in/matis-rodrigues-46b703295
                             </a>
                         </li>
                     </ul>
@@ -232,6 +231,18 @@
     <footer class="footer">
         <div class="container footer-content">
             <p>© <span id="year"></span> Rodrigues Matis - Tous droits réservés.</p>
+            <p>
+                Contact :
+                <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
+                •
+                <a 
+                    href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    Mon LinkedIn
+                </a>
+            </p>
         </div>
     </footer>
 
