--- a/index.html
+++ b/index.html
@@ -176,75 +176,4 @@
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Photo des Bains (fichier les-bains.jpg à la racine) -->
-                    <div class="image-wrapper">
-                        <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
-                    </div>
-                    <p class="img-caption">Les Bains de Seine Mauldre (photo à personnaliser).</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- SECTION CONTACT -->
-    <section id="contact" class="section section-alt">
-        <div class="container">
-            <h2 class="section-title">Contact</h2>
-            <p class="section-intro">
-                Tu peux me contacter facilement pour un projet, un job étudiant, un stage ou une collaboration.
-            </p>
-
-            <div class="grid-2 contact-grid">
-                <div class="card">
-                    <h3>Mes infos</h3>
-                    <ul class="contact-list">
-                        <li>
-                            <span class="contact-label">Email :</span>
-                            <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
-                        </li>
-                        <li>
-                            <span class="contact-label">LinkedIn :</span>
-                            <a 
-                                href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                            >
-                                linkedin.com/in/matis-rodrigues-46b703295
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>Pourquoi me contacter ?</h3>
-                    <ul class="list">
-                        <li>Job étudiant / renfort en accueil ou événementiel</li>
-                        <li>Stages en lien avec le sport ou le bien-être</li>
-                        <li>Projets nécessitant une personne sérieuse et motivée</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="footer">
-        <div class="container footer-content">
-            <p>© <span id="year"></span> Rodrigues Matis - Tous droits réservés.</p>
-            <p>
-                Contact :
-                <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
-                •
-                <a 
-                    href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    Mon LinkedIn
-                </a>
-            </p>
-        </div>
-    </footer>
-
-</body>
-</html>
+                    <!-- Photo des Bains (fichier les-b
