--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                     <div class="image-wrapper">
                         <img src="ileps.jpg" alt="Bâtiment de l’ILEPS à Cergy">
                     </div>
-                    <p class="img-caption">Campus de l’ILEPS à Cergy (photo à personnaliser).</p>
                 </div>
             </div>
         </div>
@@ -166,14 +165,86 @@
                         <li>Participation à l’organisation d’événements</li>
                         <li>Communication et image de la structure</li>
                     </ul>
-                    <!-- Mets l’URL officielle ici si tu veux -->
+                    <!-- Lien vers le site UCPA / Aqua Stadium -->
                     <a 
-                        href="#" 
+                        href="https://www.ucpa.com/aqua-stadium/aubergenville?utm_campaign=PMAX%20-%20HM%20-%20Sport%20Trotter%20-%20Aventures%20-%20Fil%20Rouge%20-%20Conv%20-%20Annuel%20-%20Desti&utm_source=google&utm_medium=cpc&utm_content=marquage_manuel&utm_source_platform=Google+Ads&utm_id=22395365712&gad_source=1&gad_campaignid=22401840215&gbraid=0AAAAADqFyYljfxVfTTf0zivJ7KiK_W4ix&gclid=Cj0KCQiA6NTJBhDEARIsAB7QHD34zbwAnDWoO456hWv_hp7Toy7Y0uGkzeWFhxnNlgwwaITdN6fYzCEaAs32EALw_wcB" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
                         class="btn btn-outline btn-sm"
                     >
-                        (Ajouter un lien vers le site des Bains)
+                        Site des Bains de Seine Mauldre
                     </a>
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Photo des Bains (fichier les-b
+                    <!-- Photo des Bains (fichier les-bains.jpg à la racine) -->
+                    <div class="image-wrapper">
+                        <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SECTION CONTACT -->
+    <section id="contact" class="section section-alt">
+        <div class="container">
+            <h2 class="section-title">Contact</h2>
+            <p class="section-intro">
+                Tu peux me contacter facilement pour un projet, un job étudiant, un stage ou une collaboration.
+            </p>
+
+            <div class="grid-2 contact-grid">
+                <div class="card">
+                    <h3>Mes infos</h3>
+                    <ul class="contact-list">
+                        <li>
+                            <span class="contact-label">Email :</span>
+                            <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
+                        </li>
+                        <li>
+                            <span class="contact-label">LinkedIn :</span>
+                            <a 
+                                href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                            >
+                                linkedin.com/in/matis-rodrigues-46b703295
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Pourquoi me contacter ?</h3>
+                    <ul class="list">
+                        <li>Job étudiant / renfort en accueil ou événementiel</li>
+                        <li>Stages en lien avec le sport ou le bien-être</li>
+                        <li>Projets nécessitant une personne sérieuse et motivée</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container footer-content">
+            <p>© <span id="year"></span> Rodrigues Matis - Tous droits réservés.</p>
+            <p>
+                Contact :
+                <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
+                •
+                <a 
+                    href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    Mon LinkedIn
+                </a>
+            </p>
+        </div>
+    </footer>
+
+</body>
+</html>
