--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
                         <li>Participation à l’organisation d’événements</li>
                         <li>Communication et image de la structure</li>
                     </ul>
-                    <!-- Lien vers le site UCPA / Aqua Stadium -->
+                    <!-- Bouton vers le site -->
                     <a 
                         href="https://www.ucpa.com/aqua-stadium/aubergenville?utm_campaign=PMAX%20-%20HM%20-%20Sport%20Trotter%20-%20Aventures%20-%20Fil%20Rouge%20-%20Conv%20-%20Annuel%20-%20Desti&utm_source=google&utm_medium=cpc&utm_content=marquage_manuel&utm_source_platform=Google+Ads&utm_id=22395365712&gad_source=1&gad_campaignid=22401840215&gbraid=0AAAAADqFyYljfxVfTTf0zivJ7KiK_W4ix&gclid=Cj0KCQiA6NTJBhDEARIsAB7QHD34zbwAnDWoO456hWv_hp7Toy7Y0uGkzeWFhxnNlgwwaITdN6fYzCEaAs32EALw_wcB" 
                         target="_blank" 
                         rel="noopener noreferrer"
                         class="btn btn-outline btn-sm"
                     >
-                        Site des Bains de Seine Mauldre
+                        Découvrir Les Bains de Seine Mauldre
                     </a>
                 </div>
 
