--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
                                 linkedin.com/in/matis-rodrigues-46b703295
                             </a>
                         </li>
+                        <li>
+                            <span class="contact-label">CV :</span>
+                            <a href="CV-matis-rodrigues.pdf" target="_blank">
+                                Télécharger mon CV (PDF)
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
