--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             </p>
 
             <div class="grid-2 contact-grid">
+                <!-- Colonne gauche : infos -->
                 <div class="card">
                     <h3>Mes infos</h3>
                     <ul class="contact-list">
@@ -212,22 +213,24 @@
                                 linkedin.com/in/matis-rodrigues-46b703295
                             </a>
                         </li>
-                        <li>
-                            <span class="contact-label">CV :</span>
-                            <a href="CV-matis-rodrigues.pdf" target="_blank">
-                                Télécharger mon CV (PDF)
-                            </a>
-                        </li>
                     </ul>
                 </div>
 
+                <!-- Colonne droite : CV -->
                 <div class="card">
-                    <h3>Pourquoi me contacter ?</h3>
+                    <h3>Mon CV</h3>
+                    <p>
+                        Retrouve l’ensemble de mon parcours sur mon CV : études, expériences professionnelles 
+                        et compétences détaillées.
+                    </p>
                     <ul class="list">
-                        <li>Job étudiant / renfort en accueil ou événementiel</li>
-                        <li>Stages en lien avec le sport ou le bien-être</li>
-                        <li>Projets nécessitant une personne sérieuse et motivée</li>
+                        <li>Licence STAPS à l’ILEPS (Cergy)</li>
+                        <li>Expérience aux Bains de Seine Mauldre (accueil & événementiel)</li>
+                        <li>Compétences : relation client, organisation, travail d’équipe</li>
                     </ul>
+                    <a href="CV-matis-rodrigues.pdf" target="_blank" class="btn btn-primary btn-sm">
+                        Télécharger mon CV (PDF)
+                    </a>
                 </div>
             </div>
         </div>
