--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                     <li><a href="#etudes" class="nav-link">Études</a></li>
                     <li><a href="#travail" class="nav-link">Travail</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <!-- Lien direct vers ton CV -->
+                    <li>
+                        <a href="CV-matis-rodrigues.pdf" class="nav-link" target="_blank" rel="noopener noreferrer">
+                            Mon CV
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
@@ -195,7 +201,6 @@
             </p>
 
             <div class="grid-2 contact-grid">
-                <!-- Colonne gauche : infos -->
                 <div class="card">
                     <h3>Mes infos</h3>
                     <ul class="contact-list">
@@ -216,21 +221,13 @@
                     </ul>
                 </div>
 
-                <!-- Colonne droite : CV -->
                 <div class="card">
-                    <h3>Mon CV</h3>
-                    <p>
-                        Retrouve l’ensemble de mon parcours sur mon CV : études, expériences professionnelles 
-                        et compétences détaillées.
-                    </p>
+                    <h3>Pourquoi me contacter ?</h3>
                     <ul class="list">
-                        <li>Licence STAPS à l’ILEPS (Cergy)</li>
-                        <li>Expérience aux Bains de Seine Mauldre (accueil & événementiel)</li>
-                        <li>Compétences : relation client, organisation, travail d’équipe</li>
+                        <li>Job étudiant / renfort en accueil ou événementiel</li>
+                        <li>Stages en lien avec le sport ou le bien-être</li>
+                        <li>Projets nécessitant une personne sérieuse et motivée</li>
                     </ul>
-                    <a href="CV-matis-rodrigues.pdf" target="_blank" class="btn btn-primary btn-sm">
-                        Télécharger mon CV (PDF)
-                    </a>
                 </div>
             </div>
         </div>
