--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                     <!-- Lien direct vers ton CV -->
                     <li>
-                        <a href="CV-matis-rodrigues.pdf" class="nav-link" target="_blank" rel="noopener noreferrer">
+                        <a href="cv-matis-rodrigues.pdf" class="nav-link" target="_blank" rel="noopener noreferrer">
                             Mon CV
                         </a>
                     </li>
