--- a/index.html
+++ b/index.html
@@ -12,23 +12,29 @@
     <!-- HEADER / NAVBAR -->
     <header class="header">
         <div class="container header-content">
-            <div class="logo">
-                <span class="logo-mark">RM</span>
-                <span class="logo-text">Rodrigues&nbsp;Matis</span>
+            <!-- Gauche : logo + bouton CV -->
+            <div class="header-left">
+                <div class="logo">
+                    <span class="logo-mark">RM</span>
+                    <span class="logo-text">Rodrigues&nbsp;Matis</span>
+                </div>
+                <a 
+                    href="CV-matis-rodrigues.pdf" 
+                    target="_blank" 
+                    rel="noopener noreferrer" 
+                    class="cv-link-header"
+                >
+                    Mon CV
+                </a>
             </div>
 
+            <!-- Droite : navigation -->
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="#qui-suis-je" class="nav-link active">Qui suis-je ?</a></li>
                     <li><a href="#etudes" class="nav-link">Études</a></li>
                     <li><a href="#travail" class="nav-link">Travail</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
-                    <!-- Lien direct vers ton CV -->
-                    <li>
-                        <a href="cv-matis-rodrigues.pdf" class="nav-link" target="_blank" rel="noopener noreferrer">
-                            Mon CV
-                        </a>
-                    </li>
                 </ul>
             </nav>
 
